Closed
Bug 516991
Opened 16 years ago
Closed 16 years ago
Drag selection is broken, drag the selection outside the visible portion the page starts jumping all over the place.
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Core
DOM: UI Events & Focus Handling
Tracking
()
RESOLVED
FIXED
People
(Reporter: alice0775, Assigned: enndeakin)
References
()
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
4.24 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a2pre) Gecko/20090916 Firefox/3.5.1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090916 Minefield/3.7a1pre ID:20090916050534
Drag selection is broken.
Say I want to select a part of a Wikipedia article that is longer than what is displayed. I can select the visible portion just fine but when I drag the selection outside the visible portion the page starts jumping all over the place.
Reproducible: Always
Steps to Reproduce:
1.Start Minefield with new profile.
2.Resize the height of the browser into small if necessary.
3.Open URL
4.Drag selection by mouse. ( Ex. select a paragraph written as "Features")
Actual Results:
The page will jump while selecting text.
Expected Results:
The page should not jump.
This issue is not only Wikipedia, I can reproduce on many sites, including forums.mozillazine.org.
Please refer to the discussion of the following forums
http://forums.mozillazine.org/viewtopic.php?p=7525055#p7525055
See YouTube video of the issue here: http://www.youtube.com/watch?v=_j8qDF6yxMY posted to the forum.
[Regression Window as follows]:
Works::
http://hg.mozilla.org/mozilla-central/rev/8afb65205203
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090913 Minefield/3.7a1pre ID:20090913055114
Broken:
http://hg.mozilla.org/mozilla-central/rev/eda2433181c9
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090913 Minefield/3.7a1pre ID:20090913071646
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=8afb65205203&tochange=eda2433181c9
[Candidate regression]
Bug 503943, add mouse capturing api to elements, remove capturing from views
| Reporter | ||
Updated•16 years ago
|
| Assignee | ||
Comment 2•16 years ago
|
||
I heard that roc might have reworked the selection code to not use views, so this may not be needed soon. Anyway, a quick fix to handle the regression.
Attachment #401057 -
Flags: review?(roc) → review+
Comment on attachment 401057 [details] [diff] [review]
get the right view when scrolling
Test?
I noticed this yesterday while I was updating my patches, but yes we should fix this right now
| Assignee | ||
Comment 4•16 years ago
|
||
Attachment #401057 -
Attachment is obsolete: true
| Assignee | ||
Comment 5•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Comment 6•15 years ago
|
||
in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a4pre) Gecko/20100316 Minefield/3.7a4pre
similar problem happens whith 2 nested scrollable views
Updated•7 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•