Bug 516991, get the right scrollable view from within the selection scroll timer, otherwise scrolling is jumpy, r=roc